Import of FEDOROV/File-Stat-ModeString-0.17 from CPAN.
gitpan-cpan-distribution: File-Stat-ModeString
gitpan-cpan-version:      0.17
gitpan-cpan-path:         FEDOROV/File-Stat-ModeString-0.17.tar.gz
gitpan-cpan-author:       FEDOROV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -9,6 +9,11 @@ SYNOPSIS
      $st_mode = string_to_mode  ( $string  );
      $type    = mode_to_typechar( $st_mode );
 
+     $record = <IN>; chomp $record;
+     $record_re = MODE_STRING_RE;
+     $record =~ m/^some_prefix\s+$record_re\s+some_suffix$/o
+            or die "invalid record format";
+
      die "Invalid mode in $string"
             if is_mode_string_valid( $string );
 
@@ -19,6 +24,11 @@ DESCRIPTION
 
     All of them use only symbolic constants for mode bits from
     File::Stat::Bits.
+
+CONSTANTS
+  MODE_STRING_RE
+
+    Regular expression to match mode string (without ^$).
 
 FUNCTIONS
   
