Import of FEDOROV/File-Stat-ModeString-0.18 from CPAN.
gitpan-cpan-distribution: File-Stat-ModeString
gitpan-cpan-version:      0.18
gitpan-cpan-path:         FEDOROV/File-Stat-ModeString-0.18.tar.gz
gitpan-cpan-author:       FEDOROV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -10,8 +10,7 @@ SYNOPSIS
      $type    = mode_to_typechar( $st_mode );
 
      $record = <IN>; chomp $record;
-     $record_re = MODE_STRING_RE;
-     $record =~ m/^some_prefix\s+$record_re\s+some_suffix$/o
+     $record =~ m/^some_prefix\s+$MODE_STRING_RE\s+some_suffix$/o
             or die "invalid record format";
 
      die "Invalid mode in $string"
@@ -26,7 +25,7 @@ DESCRIPTION
     File::Stat::Bits.
 
 CONSTANTS
-  MODE_STRING_RE
+  $MODE_STRING_RE
 
     Regular expression to match mode string (without ^$).
 
