Import of FEDOROV/File-Stat-ModeString-0.21 from CPAN.
gitpan-cpan-distribution: File-Stat-ModeString
gitpan-cpan-version:      0.21
gitpan-cpan-path:         FEDOROV/File-Stat-ModeString-0.21.tar.gz
gitpan-cpan-author:       FEDOROV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -65,7 +65,7 @@ AUTHOR
 COPYRIGHT
     Copyright (c) 2003, Dmitry Fedorov <fedorov@inp.nsk.su>
 
-LICENCE
+LICENSE
     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License as
     published by the Free Software Foundation; either version 2 of
