Import of FEDOROV/File-Stat-ModeString-0.24 from CPAN.
gitpan-cpan-distribution: File-Stat-ModeString
gitpan-cpan-version:      0.24
gitpan-cpan-path:         FEDOROV/File-Stat-ModeString-0.24.tar.gz
gitpan-cpan-author:       FEDOROV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -63,7 +63,7 @@ AUTHOR
     Dmitry Fedorov <fedorov@inp.nsk.su>
 
 COPYRIGHT
-    Copyright (c) 2003, Dmitry Fedorov <fedorov@inp.nsk.su>
+    Copyright (C) 2003 Dmitry Fedorov <fedorov@inp.nsk.su>
 
 LICENSE
     This program is free software; you can redistribute it and/or
