--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 NAME
-    File::Stat::ModeString - conversion file stat(2) mode to/from
-    string representation.
+    File::Stat::ModeString - conversion file stat(2) mode to/from string
+    representation.
 
 SYNOPSIS
      use File::Stat::ModeString;
@@ -17,16 +17,14 @@ SYNOPSIS
             if is_mode_string_valid( $string );
 
 DESCRIPTION
-    This module provides a few functions for conversion between
-    binary and literal representations of file mode bits, including
-    file type.
+    This module provides a few functions for conversion between binary and
+    literal representations of file mode bits, including file type.
 
     All of them use only symbolic constants for mode bits from
     File::Stat::Bits.
 
 CONSTANTS
   $MODE_STRING_RE
-
     Regular expression to match mode string (without ^$).
 
 FUNCTIONS
@@ -38,14 +36,13 @@ FUNCTIONS
   
     $type = mode_to_typechar( $mode )
 
-    Returns file type character of binary mode, '?' on unknown file
-    type.
+    Returns file type character of binary mode, '?' on unknown file type.
 
   
     $string = mode_to_string( $mode )
 
-    Converts binary mode value to string representation. '?' in file
-    type field on unknown file type.
+    Converts binary mode value to string representation. '?' in file type
+    field on unknown file type.
 
   
     $mode = string_to_mode( $string )
@@ -53,11 +50,11 @@ FUNCTIONS
     Converts string representation of file mode to binary one.
 
 SEE ALSO
-    the stat(2) manpage;
+    stat(2);
 
-    the File::Stat::Bits(3) manpage;
+    File::Stat::Bits(3);
 
-    the Stat::lsMode(3) manpage;
+    Stat::lsMode(3);
 
 AUTHOR
     Dmitry Fedorov <fedorov@inp.nsk.su>
@@ -66,12 +63,12 @@ COPYRIGHT
     Copyright (C) 2003 Dmitry Fedorov <fedorov@inp.nsk.su>
 
 LICENSE
-    This program is free software; you can redistribute it and/or
-    modify it under the terms of the GNU General Public License as
-    published by the Free Software Foundation; either version 2 of
-    the License, or (at your option) any later version.
+    This program is free software; you can redistribute it and/or modify it
+    under the terms of the GNU General Public License as published by the
+    Free Software Foundation; either version 2 of the License, or (at your
+    option) any later version.
 
 DISCLAIMER
-    The author disclaims any responsibility for any mangling of your
-    system etc, that this script may cause.
+    The author disclaims any responsibility for any mangling of your system
+    etc, that this script may cause.
 
