--- a/README
+++ b/README
@@ -57,10 +57,10 @@ SEE ALSO
     Stat::lsMode(3);
 
 AUTHOR
-    Dmitry Fedorov <fedorov@inp.nsk.su>
+    Dmitry Fedorov <dm.fedorov@gmail.com>
 
 COPYRIGHT
-    Copyright (C) 2003 Dmitry Fedorov <fedorov@inp.nsk.su>
+    Copyright (C) 2003 Dmitry Fedorov <dm.fedorov@gmail.com>
 
 LICENSE
     This program is free software; you can redistribute it and/or modify it
